2007-02-18 Jens Tkotz <jens@peino.de> 1.5.6-svn-b15

 * Fix: Missing } in css/screen.css.default
 
   Thanks to northfork from forums.
   
2007-02-09 Jens Tkotz <jens@peino.de> 1.5.6-svn-b14

 * Fix: When recursive unsetting was not applied for subalbums when
        current album was already unsetted.
        
 * Change: Remove little debug code.
 
2007-02-09 Jens Tkotz <jens@peino.de> 1.5.6-svn-b13

 * New: Added Top5 voted feature. (RFE #929207)
      "Email me when comments are added -> recursively"
      
 * Change: Enhanced Wording and error output for emailing.
 
2007-02-08 Jens Tkotz <jens@peino.de> 1.5.6-svn-b12

 * Fix: Typo in PN Version check.
 
2007-02-07 Jens Tkotz <jens@peino.de> 1.5.6-svn-b11

 * Fix/Change:
 
    In postNuke 0.8, _PN_VERSION_NUM and _PN_VERSION_ID were renamed.
    Leading _ is removed.
       
    Invented new global $GALLERY_POSTNUKE_VERSION, set in index.php
          
    Thanks to 'tycho' from Forum.
           
2007-02-07 Jens Tkotz <jens@peino.de> 1.5.6-svn-b10

 Ported over from 1.6

 * Fix/Change: validate_albums
              - Some Links were broken
              - Explicit check for allowed invalid albums
              - Nicified output
                                        
2007-02-06 Jens Tkotz <jens@peino.de> 1.5.6-svn-b9

 * New: Added build manifest script for svn 1.4

2007-02-01 Jens Tkotz <jens@peino.de> 1.5.6-svn-b8

 * Fix: Uninitialized return value in locateDir()
   Thanks to Peter Schumacher.

2007-01-31 Jens Tkotz <jens@peino.de> 1.5.6-svn-b7

 * Fix: Bug #1305215, enhanced files that are treated as executable
		on win32.

2007-01-31 Jens Tkotz <jens@peino.de> 1.5.6-svn-b6

 * Bug/RFE: #1589714, Better errormessage which .htaccess is meant.

2007-01-30 Jens Tkotz <jens@peino.de> 1.5.6-svn-b5

 * Fix: Manifest update.

 * Fix: Bug #1121796

 * Fix: Correct pages jump to next and previous block in navigator.

2007-01-20 Jens Tkotz <jens@peino.de> 1.5.6-svn-b4

 * Fix: Login was broken in b1.
